--- a/se17.html
+++ b/se17.html
@@ -198,8 +198,103 @@ def create_item():
         </section>
     </main>
 
-    <footer class="main-footer">
-        <p>Made with love by SS</p>
+    <footer style="background-color: #f8f8f8; padding: 20px; text-align: center; border-top: 1px solid #ddd; margin-top: 20px;">
+        <h3 style="margin-bottom: 15px; font-size: 20px; color: #333;">Lecture Navigation</h3>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; max-width: 1200px; margin: 0 auto;">
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se1.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 01: An Overview of Software Engineering</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se2.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 02: Software Process Models</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se3.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 03: Software Implementation</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se4.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 04: Verification and Validation</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se5.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 05: Software Project Management</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se6.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 06: User Interface Design</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se7.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 07</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se8.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 08</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se9.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 09</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se10.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 10</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se11.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 11</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se12.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 12</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se13.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 13</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se14.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 14</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se15.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 15</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se16.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 16</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se17.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 17: SE PAPER</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se18.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 18</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se19.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 19</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se20.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 20</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se21.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 21</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se22.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 22</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se23.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 23</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se24.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 24</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se25.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 25</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se26.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 26</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se27.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 27</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se28.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 28</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se29.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 29</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se30.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 30</a>
+            </div>
+            <div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+                <a href="se43.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 43: CSE PDF</a>
+            </div>
+        </div>
     </footer>
 </div>
 </body>
