--- a/se43.html
+++ b/se43.html
@@ -1,4 +1,9 @@
-Of course. Here is the complete, single HTML file with all topics merged and formatted.
+<div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+    <a href="se31.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 31: Advanced Topics</a>
+</div>
+<div style="background-color: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 5px; transition: transform 0.2s;">
+    <a href="se32.html" style="text-decoration: none; color: #333; font-size: 14px;">Lecture 32: Emerging Trends</a>
+</div>Of course. Here is the complete, single HTML file with all topics merged and formatted.
 
 ```html
 <!DOCTYPE html>
