--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digital Logic Design - Lecture Index</title>
+  <title>Software Engineering - Lecture Index</title>
   <style>
     /* --- General Page Styling (Light & Study Friendly) --- */
     body {
@@ -167,7 +167,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Digital Logic Design Course. All rights reserved.</p>
+    <p>&copy; 2024 Software Engineering ss soft inc. All rights reserved.</p>
   </footer>
 </div>
 
