--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <div class="container">
   <header>
-    <h1>Digital Logic Design</h1>
+    <h1>Software Engineering</h1>
     <p>Course Lecture Notes & Resources</p>
   </header>
 
