new mark questioniere

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
           </div>
           <div class="lecture-card">
             <a href="se43.html"
-              ><h2>Lecture 19</h2>
-              <p>CSE PDF 1-</p></a
+              ><h2>MARK IDC</h2>
+              <p>MARKETING SUBJECT SHORT NOTE QUESTION-</p></a
             >
           </div>
         </div>
