--- a/se43.html
+++ b/se43.html
@@ -127,6 +127,11 @@
                 <h3>Page 51: Conclusion</h3>
                 <p>A summary of the key takeaways from the lesson on promotional strategies.</p>
             </a>
+
+            <a href="mcinp.html" class="card">
+                <h3>Page 51: Conclusion</h3>
+                <p>A summary of the key takeaways from the lesson on promotional strategies.</p>
+            </a>
         </div>
     </main>
 
