--- a/mcinp.html
+++ b/mcinp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson Hub: Promotion Strategies</title>
+    <title>Marketing Core Concepts - Study Hub</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,31 +25,31 @@
             margin: 0;
         }
         .container {
-            max-width: 1000px;
+            max-width: 1100px;
             margin: 2rem auto;
             padding: 2rem;
         }
         header {
             text-align: center;
-            padding: 3rem;
-            margin-bottom: 2rem;
-            background-color: var(--color-white);
-            border-radius: 8px;
+            padding: 4rem 2rem;
+            margin-bottom: 2.5rem;
+            background-color: var(--color-dark);
+            color: white;
+            border-radius: 12px;
             box-shadow: var(--shadow);
         }
         header h1 {
-            font-size: 2.8rem;
-            color: var(--color-dark);
+            font-size: 3rem;
             margin: 0;
         }
         header p {
-            font-size: 1.1rem;
-            color: #7f8c8d;
+            font-size: 1.2rem;
             margin-top: 0.5rem;
+            opacity: 0.9;
         }
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 1.5rem;
         }
         .card {
@@ -65,11 +65,12 @@
         }
         .card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+            border-left-color: #e67e22;
         }
         .card h3 {
             margin-top: 0;
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             color: var(--color-dark);
         }
         .card p {
@@ -89,49 +90,45 @@
 <body>
 <div class="container">
     <header>
-        <h1>Lesson Hub: Promotion Strategies</h1>
-        <p>Navigate to the different sections of the lesson on promotion.</p>
+        <h1>Marketing Core Concepts Study Hub</h1>
+        <p>Select a topic below to begin your comprehensive review.</p>
     </header>
 
     <main>
         <div class="card-grid">
-            <a href="se44.html" class="card">
-                <h3>Page 44: Sales Promotion</h3>
-                <p>An introduction to what sales promotion is and its primary objectives.</p>
+            <a href="mark1q.html" class="card">
+                <h3>1. Introduction to Marketing</h3>
+                <p>Test your knowledge of the fundamental definitions, the 4Ps, and the five marketing management philosophies.</p>
             </a>
-            <a href="se45.html" class="card">
-                <h3>Page 45: Consumer Promotion Tools</h3>
-                <p>Explore tools targeted at end consumers, like samples, coupons, and rebates.</p>
+            <a href="mark2q.html" class="card">
+                <h3>2. Consumer Behavior</h3>
+                <p>Explore the consumer buying process, decision-making models, and the psychological factors that drive purchases.</p>
             </a>
-            <a href="se46.html" class="card">
-                <h3>Page 46: Trade Promotion Tools</h3>
-                <p>Learn about strategies used to motivate retailers and wholesalers.</p>
+            <a href="mark3q.html" class="card">
+                <h3>3. The Marketing Environment</h3>
+                <p>Analyze the internal and external forces (Micro, Macro, SWOT, PESTEL) that shape marketing strategy.</p>
             </a>
-            <a href="se47.html" class="card">
-                <h3>Page 47: Push vs. Pull Strategy</h3>
-                <p>Understand the two fundamental approaches to promotional flow in the market.</p>
+            <a href="mark4q.html" class="card">
+                <h3>4. Pricing Strategies</h3>
+                <p>Dive into the process of setting prices, from objectives and analysis to new product and adjustment strategies.</p>
             </a>
-            <a href="se48.html" class="card">
-                <h3>Page 48: Public Relations (PR)</h3>
-                <p>An overview of public relations and its crucial role in building a corporate image.</p>
+            <a href="mark5q.html" class="card">
+                <h3>5. Integrated Marketing Channels</h3>
+                <p>Understand the role of distribution, value networks, channel design, and the integration of online and offline channels.</p>
             </a>
-            <a href="se49.html" class="card">
-                <h3>Page 49: Major PR Tools</h3>
-                <p>Discover the key tools used by PR professionals to communicate with the public.</p>
+            <a href="mark6q.html" class="card">
+                <h3>6. Product</h3>
+                <p>Review product classifications, the five product levels, branding, packaging, and the product life cycle.</p>
             </a>
-            <a href="se50.html" class="card">
-                <h3>Page 50: Personal Selling</h3>
-                <p>Learn about the process and principles of direct, personal communication with customers.</p>
-            </a>
-            <a href="se51.html" class="card">
-                <h3>Page 51: Conclusion</h3>
-                <p>A summary of the key takeaways from the lesson on promotional strategies.</p>
+            <a href="mark7q.html" class="card">
+                <h3>7. Target Marketing (STP)</h3>
+                <p>Master the strategic process of Segmentation, Targeting, and Positioning to effectively reach your audience.</p>
             </a>
         </div>
     </main>
 
     <footer>
-        <p>End of lesson navigation. Select a topic to begin.</p>
+        <p>Created from the Marketing Lecture Series. Select a topic to start the questionnaire.</p>
     </footer>
 </div>
 </body>
