--- a/index.html
+++ b/index.html
@@ -319,6 +319,30 @@
               <p>MARKETING SUBJECT SHORT NOTE QUESTION-</p></a
             >
           </div>
+          <div class="lecture-card">
+            <a href="ictpa123.html"
+              ><h2>ict paper</h2>
+              <p>ict paper QUESTION-</p></a
+            >
+          </div>
+          <div class="lecture-card">
+            <a href="finalshortnote.html"
+              ><h2>short note</h2>
+              <p>final short note</p></a
+            >
+          </div>
+          <div class="lecture-card">
+            <a href="paper1and2.html"
+              ><h2>MARK IDC</h2>
+              <p>paper1 2 question</p></a
+            >
+          </div>
+          <div class="lecture-card">
+            <a href="paper3and4.html"
+              ><h2>MARK IDC</h2>
+              <p>paper34 question</p></a
+            >
+          </div>
         </div>
       </main>
 
