--- a/oop1.html
+++ b/oop1.html
@@ -238,12 +238,12 @@
 </head>
 <body>
 
-<div class="container">
+<!-- <div class="container">
   <header>
     <h1>Rajarata University of Sri Lanka</h1>
     <p>ICT 1306 (Object Oriented Programming) - Practical Notes</p>
-  </header>
-
+  </header> -->
+<!-- 
   <nav>
     <a href="#p01">Practical 01</a>
     <a href="#p02">Practical 02</a>
@@ -253,7 +253,7 @@
     <a href="#p06">Practical 06</a>
     <a href="#p07">Practical 07</a>
     <a href="#p08">Practical 08</a>
-  </nav>
+  </nav> -->
 
   <!-- ===================================================================== -->
   <!--                      PRACTICAL 01: Introduction                       -->
